--- a/calculator.html
+++ b/calculator.html
@@ -51,12 +51,25 @@
             <button name="data-operation">x</button>
         </div>
 
+        <div class="container mt-5">
+            <h2>Calculadora de Diferencia de Edad</h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <label for="otraEdad">Ingrese su edad para calcular la diferencia:</label>
+                    <input type="number" class="form-control" id="otraEdad">
+                </div>
+            </div>
+            <button class="btn btn-primary mt-3" onclick="calcularDiferenciaEdad()">Calcular Diferencia</button>
+            <div id="resultadoDiferencia" class="mt-3"></div>
+        </div>
+        
         <div class="rorro-footer">
             <p class="footer_index">© 2023 Calculadora</p>
         </div>
     </div>
 
     <script src="/js/script_calculator.js"></script>
+    <script src="/js/script_edad.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
