--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Información</title>
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/normalize.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
@@ -33,7 +34,7 @@
 
     <main class="rorro-main">
         <div class="row align-items-center justify-content-center ">
-            <img class="imagen" src="img/BA_001.jpg" alt="Foto-Malcom">
+            <img class="imagen" src="img/BA_001.jpg" alt="Foto-Rorro">
         </div>
     </main>
 
